tests/snapshots/test_runner__tests__compiler__typecheck__function_arguments_mismatch__function_arguments_mismatch.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f : Int -> Int = \x -> \y -> x

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/function_arguments_mismatch/function_arguments_mismatch.kk:1:29
  │
1 │ let f : Int -> Int = \x -> \y -> x
  │                             ^^^^^^ Type mismatch
  │
  = +---------------+-------------------+
    | EXPECTED TYPE |    ACTUAL TYPE    |
    +---------------+-------------------+
    | - Int         | + (@TVAR0 -> Int) |
    +---------------+-------------------+
